--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
     mavenCentral()
 }
 
+apply plugin: "io.spring.dependency-management"
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -31,8 +32,28 @@ dependencies {
 
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
     compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-java8time'
+
+    compile("com.querydsl:querydsl-core") // querydsl
+    compile("com.querydsl:querydsl-jpa") // querydsl
+    // querydsl JPAAnnotationProcessor 사용 지정
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+    annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
 }
 
 test {
     useJUnitPlatform()
+}
+
+def generated = 'src/main/generated'
+sourceSets {
+    main.java.srcDirs += [generated]
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+}
+
+clean.doLast {
+    file(generated).deleteDir()
 }
